Update article on Clojure game