@@ -20,6 +20,57 @@ I read the [OpenGL Superbible][19] to get an understanding on what functionality
 When Orbiter was eventually open sourced and released unter MIT license [here][18], I inspected the source code and discovered that about 90% of the code is graphics-related.
 So starting with the graphics problems was not a bad decision.
 
+## Software dependencies
+
+The following software is used for development.
+The software libraries run on both GNU/Linux and Microsoft Windows.
+
+* [Clojure][1] the programming language
+* [LWJGL][15] provides Java wrappers for various libraries
+  * lwjgl-opengl for 3D graphics
+  * lwjgl-glfw for windowing and input devices
+  * lwjgl-nuklear for graphical user interfaces
+  * lwjgl-stb for image I/O and using truetype fonts
+  * lwjgl-assimp to load glTF 3D models with animation data
+* [Jolt Physics][14] to simulate wheeled vehicles and collisions with meshes
+* [Fastmath][9] for fast matrix and vector math as well as spline interpolation
+* [Comb][6] for templating shader code
+* [Instaparse][10] to parse NASA Planetary Constant Kernel (PCK) files
+* [Gloss][11] to parse NASA Double Precision Array Files (DAF)
+* [Coffi][13] as a foreign function interface
+* [core.memoize][5] for least recently used caching of function results
+* [Apache Commons Compress][12] to read map tiles from tar files
+* [Malli][2] to add schemas to functions
+* [Immuconf][3] to load the configuration file
+* [Progrock][7] a progress bar for long running builds
+* [Claypoole][8] to implement parallel for loops
+* [tools.build][31] to build the project
+* [clj-async-profiler][24] Clojure profiler creating flame graphs
+* [slf4j-timbre][4] Java logging implementation for Clojure
+
+The *deps.edn* file contains operating system dependent LWJGL bindings.
+For example on GNU/Linux the *deps.edn* file contains the following:
+
+{% highlight clojure %}
+{:deps {; ...
+        org.lwjgl/lwjgl {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl$natives-linux {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-opengl {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-opengl$natives-linux {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-glfw {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-glfw$natives-linux {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-nuklear {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-nuklear$natives-linux {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-stb {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-stb$natives-linux {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-assimp {:mvn/version "3.3.6"}
+        org.lwjgl/lwjgl-assimp$natives-linux {:mvn/version "3.3.6"}}
+        ; ...
+        }
+{% endhighlight %}
+
+In order to manage the different dependencies for Microsoft Windows, a separate Git branch is maintained.
+
 ## Atmosphere rendering
 
 For the atmosphere, [Bruneton's precomputed atmospheric scattering][20] was used.
@@ -69,54 +120,261 @@ Using [java.nio.ByteBuffer][21] the floating point values were converted to a by
 
 When launching the game, the lookup tables get loaded and copied into OpenGL textures.
 Shader functions are used to lookup and interpolate values from the tables.
+When rendering the planet surface or the space craft, the atmosphere essentially gets superimposed using ray tracing.
+After rendering the planet, a background quad is rendered to display the part of the atmosphere which appears above the horizon.
 
-* generate blue noise, worley noise, perlin noise (spit-floats) use pfor and generate flat vector with 2D or 3D noise data
-* Use templating language to make flexible shaders, nested lists of shaders are used to specify dependencies and build shader programs
-* astronomy from Skyfield
-* converting NASA Bluemarble data and elevation data into multi resolution map and then cube map of quad trees, data gets loaded up to required level of detail in a background thread and then loaded into OpenGL textures in the main thread, tessellation information for neighbouring quads gets updated in the background as well (using a future)
-* quaternion implementation
-* aerodynamics using fastmath splines and fastmath coordinate transformations
-* Unit tested shader functions using shader mocks and templating (e.g. noise-octaves)
-* deep opacity maps, render clouds in front of background quad, planet and space craft
-* render fonts to a texture, Nuklear GUI immediate mode commands fill a render buffer with chunks of triangles which then get rendered using a generic shader
-* input code uses multimethods to dispatch events to methods of an input handler (protocol), a hash map is used to map keys, buttons, and axes to keywords which are then used to dispatch to code for making state changes (atom referencing a hash map)
-* Jolt bindings using Coffi
-* Use Assimp to read glTF model with animations into a nested data structure
-* physics uses multi methods to map from source to target coordinate system
-* Steam does not like insane number of files, so map tiles are stored in tar files and random accessed using an lru cache of opened tar files
-* Flame graph
-* Unboxed math
-* Warn on reflection
-* Cross platform (where OpenGL is supported)
-* Using packet
-* Can include project in build.clj
-* xvfb-run to test shaders
-* Steam depots and diffs
-* Vim-slime
-* Midje
+## Templating OpenGL shaders
+
+It is possible to make programming with OpenGL shaders more flexible by using a templating library such as *Comb*.
+The following shader defines multiple octaves of noise on a base noise function:
+
+{% highlight glsl %}
+#version 410 core
+
+float <%= base-function %>(vec3 idx);
+
+float <%= method-name %>(vec3 idx)
+{
+  float result = 0.0;
+<% (doseq [multiplier octaves] %>
+  result += <%= multiplier %> * <%= base-function %>(idx);
+  idx *= 2;
+<% ) %>
+  return result;
+}
+{% endhighlight %}
+
+One can then for example define the function *fbm\_noise* using octaves of the base function *noise* as follows:
+
+{% highlight clojure %}
+(def noise-octaves
+  "Shader function to sum octaves of noise"
+  (template/fn [method-name base-function octaves] (slurp "resources/shaders/core/noise-octaves.glsl")))
+
+; ...
+
+(noise-octaves "fbm_noise" "noise" [0.57 0.28 0.15])
+{% endhighlight %}
+
+## Planet rendering
+
+To render the planet, [NASA Bluemarble][25] data, [NASA Blackmarble][26] data, and [NASA Elevation][27] data was used.
+The images were converted to a multi resolution pyramid of map tiles.
+The following functions were implemented for color map tiles and for elevation tiles:
+
+* a function to load and cache map tiles of given 2D tile index and level of detail
+* a function to extract a pixel from a map tile
+* a function to extract the pixel for a specific longitude and latitude
+
+The functions for extracting a pixel for given longitude and latitude then were used to generate a cube map with a quad tree of tiles for each face.
+For each tile, the following files were generated:
+
+* A daytime texture
+* A night time texture
+* An image of 3D vectors defining a surface mesh
+* A water mask
+* A normal map
+
+Altogether 655350 files were generated.
+Because the Steam content builder does not support a large number of files, each row of tile data was aggregated into a tar file.
+The *Apache Commons Compress* library allows you to open a tar file to get a list of entries and then perform random access on the contents of the tar file.
+A Clojure LRU cache was used to maintain a cache of open tar files for improved performance.
+
+At run time, a future is created which returns an updated tile tree, a list of tiles to drop, and a path list of the tiles to load into OpenGL.
+When the future is realized, the main thread deletes the OpenGL textures from the drop list, and then uses the path list to get the new loaded images from the tile tree, load them into OpenGL textures, and create an updated tile tree with the new OpenGL textures added.
+The following functions to manipulate quad trees were implemented to realize this:
+
+{% highlight clojure %}
+(defn quadtree-add
+  "Add tiles to quad tree"
+  {:malli/schema [:=> [:cat [:maybe :map] [:sequential [:vector :keyword]] [:sequential :map]] [:maybe :map]]}
+  [tree paths tiles]
+  (reduce (fn add-title-to-quadtree [tree [path tile]] (assoc-in tree path tile)) tree (mapv vector paths tiles)))
+
+(defn quadtree-extract
+  "Extract a list of tiles from quad tree"
+  {:malli/schema [:=> [:cat [:maybe :map] [:sequential [:vector :keyword]]] [:vector :map]]}
+  [tree paths]
+  (mapv (partial get-in tree) paths))
+
+(defn quadtree-drop
+  "Drop tiles specified by path list from quad tree"
+  {:malli/schema [:=> [:cat [:maybe :map] [:sequential [:vector :keyword]]] [:maybe :map]]}
+  [tree paths]
+  (reduce dissoc-in tree paths))
+
+(defn quadtree-update
+  "Update tiles with specified paths using a function with optional arguments from lists"
+  {:malli/schema [:=> [:cat [:maybe :map] [:sequential [:vector :keyword]] fn? [:* :any]] [:maybe :map]]}
+  [tree paths fun & arglists]
+  (reduce (fn update-tile-in-quadtree
+            [tree [path & args]]
+            (apply update-in tree path fun args)) tree (apply map list paths arglists)))
+{% endhighlight %}
+
+## Other topics
+
+### Solar system
+
+The astronomy code for getting the position and orientation of planets was implemented according to the [Skyfield][28] Python library.
+The Python library in turn is based on the [SPICE][29] toolkit of the NASA JPL.
+The JPL basically provides sequences of [Chebyshev polynomials][30] to interpolate positions of Moon and planets as well as the orientation of the Moon as binary files.
+Reference coordinate systems and orientations of other bodies are provided in text files which consist of human and machine readable sections.
+
+### Jolt bindings
+
+The required Jolt functions for wheeled vehicle dynamics and collisions with meshes were wrapped in C functions and compiled into a shared library.
+The *Coffi* Clojure library (which is a wrapper for Java's Foreign Function & Memory API) was used to make the C functions and data types usable in Clojure.
+
+For example the following code implements a call to the C function *add\_force*:
+
+{% highlight clojure %}
+(defcfn add-force
+  "Apply a force in the next physics update"
+  add_force [::mem/int ::vec3] ::mem/void)
+{% endhighlight %}
+
+Here `::vec3` refers to a custom composite type defined using basic types.
+
+{% highlight clojure %}
+(def vec3-struct
+  [::mem/struct
+   [[:x ::mem/double]
+    [:y ::mem/double]
+    [:z ::mem/double]]])
+
+
+(defmethod mem/c-layout ::vec3
+  [_vec3]
+  (mem/c-layout vec3-struct))
+
+
+(defmethod mem/serialize-into ::vec3
+  [obj _vec3 segment arena]
+  (mem/serialize-into {:x (obj 0) :y (obj 1) :z (obj 2)} vec3-struct segment arena))
+
+
+(defmethod mem/deserialize-from ::vec3
+  [segment _vec3]
+  (let [result (mem/deserialize-from segment vec3-struct)]
+    (vec3 (:x result) (:y result) (:z result))))
+{% endhighlight %}
+
+### Performance
+
+The *clj-async-profiler* was used to create flame graphs visualising the performance of the game.
+In order to get reflection warnings for Java calls without sufficient type declarations, *unchecked-math* was used.
+{% highlight clojure %}
+(set! *unchecked-math* :warn-on-boxed)
+{% endhighlight %}
+
+Furthermore to discover missing declarations of numerical types, *warn-on-reflection* was used.
+{% highlight clojure %}
+(set! *unchecked-math* :warn-on-boxed)
+(set! *warn-on-reflection* true)
+{% endhighlight %}
+
+To reduce garbage collector pauses, the ZGC low-latency garbage collector for the JVM was used.
+The following section in *deps.edn* ensures that the ZGC garbage collector is used when running the project with *clj -M:run*:
+
+{% highlight clojure %}
+{:deps {; ...
+        }
+ :aliases {:run {:jvm-opts ["-Xms2g" "-Xmx4g" "--enable-native-access=ALL-UNNAMED" "-XX:+UseZGC"
+                            "--sun-misc-unsafe-memory-access=allow"]
+                 :main-opts ["-m" "sfsim.core"]}}}
+{% endhighlight %}
+
+The option to use ZGC is also specified in the Packr JSON file used to deploy the application.
+
 * Source code link, wishlist
+* input code uses multimethods to dispatch events to methods of an input handler (protocol), a hash map is used to map keys, buttons, and axes to keywords which are then used to dispatch to code for making state changes (atom referencing a hash map)
 
-* [Clojure][1] the programming languagte
-* [LWJGL][15] provides Java wrappers for various libraries
-  * lwjgl-opengl for 3D graphics
-  * lwjgl-glfw for windowing and input devices
-  * lwjgl-nuklear for graphical user interfaces
-  * lwjgl-stb for image I/O and using truetype fonts
-  * lwjgl-assimp to load glTF 3D models with animation data
-* [Jolt Physics][14] to simulate wheeled vehicles and collisions with meshes
-* [Fastmath][9] for fast matrix and vector math
-* [Comb][6] for templating shader code
-* [Instaparse][10] to parse NASA Planetary Constant Kernel (PCK) files
-* [Gloss][11] to parse NASA Double Precision Array Files (DAF)
-* [Coffi][13] as a foreign function interface
-* [core.memoize][5] for least recently used caching of function results
-* [Apache Commons Compress][12] to read map tiles from tar files
-* [Malli][2] to add schemas to functions
-* [Immuconf][3] to load the configuration file
-* [Progrock][7] a progress bar for long running builds
-* [Claypoole][8] to implement parallel for loops
-* [slf4j-timbre][4] Java logging implementation for Clojure
+### Building the project
 
+In order to build the map tiles, atmospheric lookup tables, and other data files using *tools.build*, the project source code was made available in the *build.clj* file using a *:local/root* dependency:
+{% highlight clojure %}
+{:deps {; ...
+        }
+ :aliases {; ...
+           :build {:deps {io.github.clojure/tools.build {:mvn/version "0.10.10"}
+                          sfsim/sfsim {:local/root "."}}
+                   :ns-default build
+                   :exec-fn all
+                   :jvm-opts ["-Xms2g" "-Xmx4g" "--sun-misc-unsafe-memory-access=allow"]}}}
+{% endhighlight %}
+
+Various targets were defined to build the different components of the project.
+For example the atmospheric lookup tables can be build by specifying *clj -T:build atmosphere-lut* on the command line.
+
+The following section in the *build.clj* file was added to allow creating an "Uberjar" JAR file with all dependencies by specifying *clj -T:build uber* on the command-line.
+
+{% highlight clojure %}
+(defn uber [_]
+  (b/copy-dir {:src-dirs ["src/clj"]
+               :target-dir class-dir})
+  (b/compile-clj {:basis basis
+                  :src-dirs ["src/clj"]
+                  :class-dir class-dir})
+  (b/uber {:class-dir class-dir
+           :uber-file "target/sfsim.jar"
+           :basis basis
+           :main 'sfsim.core}))
+{% endhighlight %}
+
+To create a Linux executable with Packr, one can then run *java -jar packr-all-4.0.0.jar scripts/packr-config-linux.json* where the JSON file has the following content:
+
+{% highlight json %}
+{
+  "platform": "linux64",
+  "jdk": "/usr/lib/jvm/jdk-24.0.2-oracle-x64",
+  "executable": "sfsim",
+  "classpath": ["target/sfsim.jar"],
+  "mainclass": "sfsim.core",
+  "resources": ["LICENSE", "libjolt.so", "venturestar.glb", "resources"],
+  "vmargs": ["Xms2g", "Xmx4g", "XX:+UseZGC"],
+  "output": "out-linux"
+}
+{% endhighlight %}
+
+In order to distribute the game on Steam, three depots were created:
+
+* a data depot with the operating system independent data files
+* a Linux depot with the Linux executable and Uberjar including LWJGL's Linux native bindings
+* and a Windows depot with the Windows executable and an Uberjar including LWJGL's Windows native bindings
+
+When updating a depot, the Steam ContentBuilder command line tool creates and uploads a patch in order to preserve storage space.
+
+## Future work
+
+Although the hard parts are mostly done, there are still several things to do:
+
+* control surfaces and thruster graphics
+* launchpad and runway graphics
+* sound effects
+* a 3D cockpit
+* the Moon
+* a space station
+
+It would also be interesting to make the game modable in a safe way (maybe evaluating Clojure files in a sandboxed environment?).
+
+Anyway, let me know any comments and suggestions.
+
+Enjoy!
+
+## Related blog posts
+
+* [Flight dynamics model for simulating Venturestar style spacecraft](https://www.wedesoft.de/simulation/2025/06/06/flight-model-physics-venturestar/)
+* [Test Driven Development with OpenGL](https://www.wedesoft.de/software/2022/07/01/tdd-with-opengl/)
+* [Implementing GUIs using Clojure and LWJGL Nuklear bindings](https://www.wedesoft.de/software/2024/05/11/clojure-nuklear/)
+* [Procedural Volumetric Clouds](https://www.wedesoft.de/software/2023/05/03/volumetric-clouds/)
+* [Procedural generation of global cloud cover](https://www.wedesoft.de/software/2023/03/20/procedural-global-cloud-cover/)
+* [Reversed-Z Rendering in OpenGL](https://www.wedesoft.de/software/2021/09/20/reversed-z-rendering/)
+* [Specifying Clojure function schemas with Malli](https://www.wedesoft.de/software/2023/12/25/clojure-function-schemas-with-malli/)
+* [Implement an Interpreter using Clojure Instaparse](https://www.wedesoft.de/software/2024/07/05/clojure-instaparse/)
+* [Orbits with Jolt Physics](https://www.wedesoft.de/simulation/2025/08/09/orbits-with-jolt-physics/)
+* [Getting started with the Jolt Physics Engine](https://www.wedesoft.de/simulation/2024/09/26/jolt-physics-engine/)
+* [Create Blender bones and animate and import with Assimp](https://www.wedesoft.de/graphics/2023/09/29/blender-animate-bones-assimp/)
 
 [1]: https://clojure.org/
 [2]: https://github.com/metosin/malli
@@ -141,3 +399,11 @@ Shader functions are used to lookup and interpolate values from the tables.
 [21]: https://docs.oracle.com/javase/8/docs/api/java/nio/ByteBuffer.html
 [22]: https://clojuredocs.org/clojure.java.io/output-stream
 [23]: https://clojuredocs.org/clojure.core/pmap
+[24]: https://github.com/clojure-goes-fast/clj-async-profiler
+[25]: https://visibleearth.nasa.gov/collection/1484/blue-marble
+[26]: https://earthobservatory.nasa.gov/features/NightLights/page3.php
+[27]: https://www.ngdc.noaa.gov/mgg/topo/gltiles.html
+[28]: https://rhodesmill.org/skyfield/
+[29]: https://naif.jpl.nasa.gov/naif/index.html
+[30]: https://en.wikipedia.org/wiki/Chebyshev_polynomials
+[31]: https://clojure.org/guides/tools_build
